--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <title>Weather Dashboard</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div id="weather-dashboard">
+      <div id="search-form">
+        <input type="text" id="city-input" placeholder="Enter City">
+        <button id="search-btn">Search</button>
+      </div>
+      <div id="current-weather"></div>
+      <div id="forecast"></div>
+      <div id="search-history"></div>
+    </div>
+    <script src="./assets/script.js"></script>
+  </body>
 </html>
