--- a/index.html
+++ b/index.html
@@ -5,18 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div id="weather-dashboard">
-      <div id="search-form">
-        <input type="text" id="city-input" placeholder="Enter City">
-        <button id="search-btn">Search</button>
-      </div>
-      <div id="current-weather"></div>
-      <div id="forecast"></div>
-      <div id="search-history"></div>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
+</head>
+<body>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card mt-5">
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="city-input">Enter City</label>
+                                <input type="text" class="form-control" id="city-input">
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-block" id="search-btn">Search</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="card mt-3">
+                    <div class="card-body">
+                        <div id="current-weather"></div>
+                    </div>
+                </div>
+                <div class="card mt-3">
+                    <div class="card-body">
+                        <div id="forecast"></div>
+                    </div>
+                </div>
+                <div class="card mt-3">
+                    <div class="card-body">
+                        <div id="search-history"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="./assets/script.js"></script>
-  </body>
+</body>
 </html>
